6 написал все позитив тесты для bookstore